--- a/BabelSpeaker/res/values/dimens.xml
+++ b/BabelSpeaker/res/values/dimens.xml
@@ -3,5 +3,58 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    
+    <dimen name="quotes_type_width">80dp</dimen>
+    <dimen name="account_info_height">50dp</dimen>
+    <dimen name="right_arrow_height">20dp</dimen>
+    <dimen name="quotes_data_item_height">50dp</dimen>
+    <dimen name="quotes_data_item_width">100dp</dimen>
+    <dimen name="title_height">50dp</dimen>
+    <dimen name="content_margin_top">40dp</dimen>
+    <dimen name="content_padding_top">20dp</dimen>
+    <dimen name="list_left_width">70dp</dimen>
+    
+    <dimen name="account_button_height">25dp</dimen>
+    <dimen name="account_update_button_height">30dp</dimen>
+    <dimen name="account_update_button_width">70dp</dimen>
+    
+    <dimen name="sequence_button_width">60dp</dimen>
+    
+    <dimen name="account_register_button_height">35dp</dimen>
+    <dimen name="account_register_button_width">70dp</dimen>
+    
+    <dimen name="account_image_height">25dp</dimen>
+    
+    <dimen name="quotes_button_width">80dp</dimen>
+    
+    <dimen name="service_item_width">100dp</dimen>
+    <dimen name="service_item_height">100dp</dimen>
+    <dimen name="service_item_margin_left">20dp</dimen>
+    <dimen name="service_item_margin_right">20dp</dimen>
+    <dimen name="service_item_margin_top">-20dp</dimen>
+    <dimen name="service_item_margin_top_plus">40dp</dimen>
+    
+    <dimen name="metals_red_button_height">50dp</dimen>
+    
+    
+    <dimen name="price_conversion_data_height">50dp</dimen>
+    <dimen name="price_conversion_data_padding_left">5dp</dimen>
+    <dimen name="price_conversion_data_line">1dp</dimen>
 
+    <dimen name="quotes_remind_item_height">50dp</dimen>
+    <dimen name="quotes_remind_widget_width">80dp</dimen>
+    <dimen name="quotes_remind_widget_height">35dp</dimen>
+    
+    <dimen name="remind_button_width">70dp</dimen>
+    
+    <dimen name="premium_item_height">200dp</dimen>
+    
+    <dimen name="drag_drop_item_normal_height">48dp</dimen>
+    
+    <dimen name="optional_add_item_height">30dp</dimen>
+    <dimen name="optional_edit_item_height">50dp</dimen>
+    
+    <dimen name="intrady_guide_height">80dp</dimen>
+    
+    <dimen name="td_gain_loss_height">60dp</dimen>
 </resources>
